--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <h1>非リアども〜サッカーするぞCup<br>（はるみち杯）<h1>
+        <p style="font-size:small;">※名前考えたのはるみちね</p>
     </header>
     <div id="content">
         <div id="schedule">
