--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="participants_none">
             <h2>参加済み</h2>
         </div>
-        <p>We're wating for your joining!</p>
+        <p>※日程調整がうまくいかんかったら来れん人も出てくるかも</p>
     </div>
     <script src="./src/script.js"></script>
 </body>
