--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <h1>非リアども〜サッカーするぞCup<br>（はるみち杯）<h1>
-        <p style="font-size:small;">※名前考えたのはるみちね</p>
+        <p style="font-size:small;">※名前考えたのはるみちね 12/30中に日程確定する</p>
     </header>
     <div id="content">
         <div id="schedule">
-            <h2>2023年初め(未定)キックオフ</h2>
+            <h2>1/4か1/5-キックオフ</h2>
             <p>参加者募集中！（同学年台中卒男子なら誰でも）</p>
         </div>
         <div id="teams">
