--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </header>
     <div id="content">
         <div id="schedule">
-            <h2>1/4か1/5-キックオフ</h2>
-            <p>参加者募集中！（同学年台中卒男子なら誰でも）</p>
+            <h2>1/4 1:30-キックオフ</h2>
+            <p>チーム分け決定</p>
         </div>
         <div id="teams">
             <div id="teamBlue" class="team">
                 <h2>チームたいこう尊師</h2>
             </div>
             <div id="teamRed" class="team">
-                <h2>チーム●ん●んたつみ</h2>
+                <h2>チームイケメンみつかわ</h2>
             </div>
         </div>
         <div id="participants_none">
